<resources>
    <string name="app_name">Stegano</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="re_type">Re-type</string>
    <string name="password">Password</string>
    <string name="dob">D.O.B</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_reg">reg</string>
    <string name="signup">SIGNUP</string>
    <string name="security">Security</string>
    <string name="title_activity_home">home</string>
    <string name="title_activity_about">About</string>
    <string name="large_text">
        Users typically reuse the same personalized identification number (PIN) for multiple systems and in numerous sessions. Direct PIN entries are highly susceptible to shoulder-surfing attacks as attackers can effectively observe PIN entry with concealed cameras. Indirect PIN entry methods proposed as countermeasures are rarely deployed because they demand a heavier cognitive workload for users. To achieve security and usability, we present a practical indirect PIN entry method called SteganoPIN. The human–machine interface of SteganoPIN is two numeric keypads, one covered and the other open, designed to physically block shoulder surfing attacks. After locating a long-term PIN in the more typical layout, through the covered permuted keypad, a user generates a one-time PIN that can safely be entered in plain view of attackers. SteganoPIN is resilient to camera-based shoulder-surfing attacks over multiple authentication sessions. It remains limited to PIN-based authentication.
    </string>
    <string name="title_activity_change_pwd">change_pwd</string>

    <string name="title_activity_splash_screen">splash_screen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
