<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="140dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.geoaloshious.stegano.reg"
    tools:showIn="@layout/activity_reg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/name"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/gender"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_gender"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/dob"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_dob"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/phone"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_phone"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/email"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_email"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/username"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_uname"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/password"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_repwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_pwd"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/re_type"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_name"
            android:layout_toEndOf="@+id/tv_uname"
            android:layout_toRightOf="@+id/tv_uname"
            android:ems="10"
            android:inputType="textPersonName"/>
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/tv_dob"
    android:layout_alignLeft="@+id/et_name"
    android:layout_alignStart="@+id/et_name"
    android:orientation="horizontal"
    android:id="@+id/rg_gender">

    <RadioButton
        android:id="@+id/rd_male"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:text="Male"
        android:textColor="@android:color/black" />

    <RadioButton
        android:id="@+id/rd_female"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="Female"
        android:textColor="@android:color/black" />
</RadioGroup>

        <EditText
            android:id="@+id/et_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_phone"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="date" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_email"
            android:layout_alignLeft="@+id/et_dob"
            android:layout_alignStart="@+id/et_dob"
            android:ems="10"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_uname"
            android:layout_alignEnd="@+id/et_phone"
            android:layout_alignRight="@+id/et_phone"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_uname"
            android:layout_toEndOf="@+id/tv_uname"
            android:layout_toRightOf="@+id/tv_uname"
            android:ems="10"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_pwd"
            android:layout_toEndOf="@+id/tv_uname"
            android:layout_toRightOf="@+id/tv_uname"
            android:ems="10"
            android:inputType="numberPassword" />

        <EditText
            android:id="@+id/et_repwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bt_signup"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="numberPassword" />

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:background="@android:color/background_dark"
            android:layout_alignBottom="@+id/et_pwd"
            android:layout_marginLeft="9dp"
            android:layout_marginStart="9dp"
            android:layout_toEndOf="@+id/et_pwd"
            android:layout_toRightOf="@+id/et_pwd"
            android:text="OK"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/bt_signup"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@android:color/background_dark"
            android:layout_below="@+id/tv_repwd"
            android:layout_centerHorizontal="true"
            android:text="SIGNUP"
            android:textColor="@android:color/white"/>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
